--- a/src/web/app/student-growth-goals/views/goals-private.html
+++ b/src/web/app/student-growth-goals/views/goals-private.html
@@ -5,7 +5,7 @@
         </h3>
         <p>List of Student Growth Goals you have started, but not yet shared with your evaluator</p>
         <div class="pull-right">
-            <button ng-show="vm.settingsSubmitted" ui-sref="sg-bundle-setup({id:-1})" class="btn btn-primary btn-xs" type="button">
+            <button ng-show="vm.settingsSubmitted" ng-click="vm.createBundle()" class="btn btn-primary btn-xs" type="button">
                 <i class="fa fa-plus-circle"></i>&nbsp;Add Goal
             </button>
         </div>
