--- a/src/web/app/artifacts/views/artifact-builder.html
+++ b/src/web/app/artifacts/views/artifact-builder.html
@@ -10,76 +10,72 @@
                    </div>
                    <div class="row">
                        <div class="col-lg-12">
-                           <div>
-                               <div class="row">
-                                   <div class="col-lg-12">
-                                       <div class="form-group" ng-class="{ 'has-error' : vm.builderForm.artifactTitle.$invalid && !vm.builderForm.artifactTitle.$pristine }">
-                                           <label>Title</label>
-                                           <input type="text" name="artifactTitle" class="form-control" ng-model="vm.artifact.title" placeholder="Enter Title" required>
-                                           <div ng-messages="vm.builderForm.artifactTitle.$error">
-                                               <div ng-messages-include="app/core/views/validation-messages.html"></div>
-                                           </div>
+                           <div class="form-group" ng-class="{ 'has-error' : vm.builderForm.artifactTitle.$invalid && !vm.builderForm.artifactTitle.$pristine }">
+                               <label>Title</label>
+                               <input type="text" name="artifactTitle" class="form-control" ng-model="vm.artifact.title" placeholder="Enter Title" required>
+                               <div ng-messages="vm.builderForm.artifactTitle.$error">
+                                   <div ng-messages-include="app/core/views/validation-messages.html"></div>
+                               </div>
+                           </div>
+                        </div>
+                   </div>
+                   <br/>
+                     <div class="row">
+                       <div class="col-lg-12">
+                           <label>Attach your artifact item(s)</label>
+                           <artifact-builder-lib-items
+                                   ng-show="vm.itemToEdit===null"
+                                   artifact="vm.artifact"
+                                   edit-item-fcn="vm.editItem"
+                                   create-item-fcn="vm.createItem">
+                           </artifact-builder-lib-items>
+
+                           <artifact-builder-edit-lib-item
+                                   ng-show="vm.itemToEdit"
+                                   artifact="vm.artifact"
+                                   item="vm.itemToEdit"
+                                   done-fcn="vm.doneItemEdit"
+                                   cancel-fcn="vm.cancelItemEdit" >
+                           </artifact-builder-edit-lib-item>
+                       </div>
+                   </div>
+                   <br/><br/>
+                   <div class="row">
+                       <div class="col-lg-12">
+                           <rubric-row-selector done-fcn="vm.alignmentDone" rubric-rows="vm.artifact.alignedRubricRows"></rubric-row-selector>
+                           <br/><br/>
+                           <div class="row">
+                               <div class="col-lg-12">
+                                   <div>
+                                       <div class="alert alert-warning" ng-show="vm.artifact.alignedRubricRows.length>4">
+                                               <span class="fa fa-info-circle fa-2x">TODO: need a message about being careful not to over-align.
+                                               </span>
+                                       </div>
+                                       <div class="form-group">
+                                           <label>Provide reasoning for your alignment choice(s): (optional)</label>
+                                           <textarea rows="3" ng-model="vm.artifact.evidence" class="form-control"></textarea>
                                        </div>
                                    </div>
                                </div>
-                               <br/>
-                               <div class="row">
-                                   <div class="col-lg-12">
-                                       <label>Attach your artifact item(s)</label>
-                                       <artifact-builder-lib-items
-                                               ng-show="vm.itemToEdit===null"
-                                               artifact="vm.artifact"
-                                               edit-item-fcn="vm.editItem"
-                                               create-item-fcn="vm.createItem">
-                                       </artifact-builder-lib-items>
-
-                                       <artifact-builder-edit-lib-item
-                                               ng-show="vm.itemToEdit"
-                                               artifact="vm.artifact"
-                                               item="vm.itemToEdit"
-                                               done-fcn="vm.doneItemEdit"
-                                               cancel-fcn="vm.cancelItemEdit" >
-                                       </artifact-builder-edit-lib-item>
-                                   </div>
-                               </div>
-                               <artifact-builder-linked-objects artifact="vm.artifact"></artifact-builder-linked-objects>
-                               <br/>
-                                <br/>
                            </div>
                        </div>
                    </div>
 
-                    <div class="row">
-                        <div class="col-lg-12">
-                          <!--  <strong>Link this Artifact to rubric components within the Framework</strong>
-                            <p>Check the items you want to align this artifact to.</p>
-                            <br/>
-                            <artifact-alignment artifact="vm.artifact"></artifact-alignment>-->
-                            <rubric-row-selector rubric-rows="vm.artifact.alignedRubricRows"></rubric-row-selector>
-                            <br/><br/>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div>
-                                        <div class="alert alert-warning" ng-show="vm.artifact.alignedRubricRows.length>4">
-                                               <span class="fa fa-info-circle fa-2x">TODO: need a message about being careful not to over-align.
-                                               </span>
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Provide reasoning for your alignment choice(s): (optional)</label>
-                                            <textarea rows="3" ng-model="vm.artifact.evidence" class="form-control"></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                   <br/><br/>
+                   <div class="row">
+                       <div class="col-lg-12">
+                           <artifact-builder-linked-objects artifact="vm.artifact"></artifact-builder-linked-objects>
+                       </div>
+                   </div>
+                    <br/><br/>
                    <div class="row">
                        <div class="col-lg-12">
                            <div>
                                <div class="pull-right">
-                                   <button type="button" class="btn btn-default btn-outline btn-sm " ng-click="vm.cancel()">
-                                       Cancel
+                                   <button type="button" class="btn btn-default btn-outline btn-sm "
+                                           confirm="Are you sure you want to delete this artifact?"
+                                           ng-click="vm.delete()">
+                                       Delete
                                    </button>
                                    <button type="submit" class="btn btn-default btn-outline btn-sm" ng-click="vm.saveForLater(vm.artifact)" >
                                        Save for Later
