--- a/src/web/app/artifacts/views/artifact-builder.html
+++ b/src/web/app/artifacts/views/artifact-builder.html
@@ -1,97 +1,128 @@
-<div class="ibox float-e-margins">
-    <div class="ibox-content">
-        <div class="row">
-           <div class="col-lg-12">
-               <ng-form name="vm.builderForm" novalidate>
-                   <div class="row">
-                       <div class="col-lg-12">
-                           <artifact-rejection ng-if="vm.artifact.wfState === enums.WfState.ARTIFACT_REJECTED" artifact="vm.artifact"></artifact-rejection>
-                       </div>
-                   </div>
-                   <div class="row">
-                       <div class="col-lg-12">
-                           <div class="form-group" ng-class="{ 'has-error' : vm.builderForm.artifactTitle.$invalid && !vm.builderForm.artifactTitle.$pristine }">
-                               <label>Title</label>
-                               <input type="text" name="artifactTitle" class="form-control" ng-model="vm.artifact.title" placeholder="Enter Title" required>
-                               <div ng-messages="vm.builderForm.artifactTitle.$error">
-                                   <div ng-messages-include="app/core/views/validation-messages.html"></div>
-                               </div>
-                           </div>
-                        </div>
-                   </div>
-                   <br/>
-                     <div class="row">
-                       <div class="col-lg-12">
-                           <label>Attach your artifact item(s)</label>
-                           <artifact-builder-lib-items
-                                   ng-show="vm.itemToEdit===null"
-                                   artifact="vm.artifact"
-                                   edit-item-fcn="vm.editItem"
-                                   create-item-fcn="vm.createItem">
-                           </artifact-builder-lib-items>
+<div class="row">
+    <div class="col-lg-8">
+        <div class="ibox float-e-margins">
+            <div class="ibox-content">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ng-form name="vm.builderForm" novalidate>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <artifact-rejection ng-if="vm.artifact.wfState === enums.WfState.ARTIFACT_REJECTED" artifact="vm.artifact"></artifact-rejection>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="form-group" ng-class="{ 'has-error' : vm.builderForm.artifactTitle.$invalid && !vm.builderForm.artifactTitle.$pristine }">
+                                        <label>Title</label>
+                                        <input ng-keyup="vm.dirty=true" type="text" name="artifactTitle" class="form-control" ng-model="vm.artifact.title" placeholder="Enter Title" required>
+                                        <div ng-messages="vm.builderForm.artifactTitle.$error">
+                                            <div ng-messages-include="app/core/views/validation-messages.html"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <br/>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <label>Attach your artifact item(s)</label>
+                                    <artifact-builder-lib-items
+                                            ng-show="vm.itemToEdit===null"
+                                            artifact="vm.artifact"
+                                            edit-item-fcn="vm.editItem"
+                                            create-item-fcn="vm.createItem">
+                                    </artifact-builder-lib-items>
 
-                           <artifact-builder-edit-lib-item
-                                   ng-show="vm.itemToEdit"
-                                   artifact="vm.artifact"
-                                   item="vm.itemToEdit"
-                                   done-fcn="vm.doneItemEdit"
-                                   cancel-fcn="vm.cancelItemEdit" >
-                           </artifact-builder-edit-lib-item>
-                       </div>
-                   </div>
-                   <br/><br/>
-                   <div class="row">
-                       <div class="col-lg-12">
-                           <rubric-row-selector done-fcn="vm.alignmentDone" rubric-rows="vm.artifact.alignedRubricRows"></rubric-row-selector>
-                           <br/><br/>
-                           <div class="row">
-                               <div class="col-lg-12">
-                                   <div>
-                                       <div class="alert alert-warning" ng-show="vm.artifact.alignedRubricRows.length>4">
+                                    <artifact-builder-edit-lib-item
+                                            ng-show="vm.itemToEdit"
+                                            artifact="vm.artifact"
+                                            item="vm.itemToEdit"
+                                            done-fcn="vm.doneItemEdit"
+                                            cancel-fcn="vm.cancelItemEdit" >
+                                    </artifact-builder-edit-lib-item>
+                                </div>
+                            </div>
+                            <br/><br/>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <rubric-row-selector done-fcn="vm.alignmentDone" rubric-rows="vm.artifact.alignedRubricRows"></rubric-row-selector>
+                                    <br/><br/>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <div>
+                                                <div class="alert alert-warning" ng-show="vm.artifact.alignedRubricRows.length>4">
                                                <span class="fa fa-info-circle fa-2x">TODO: need a message about being careful not to over-align.
                                                </span>
-                                       </div>
-                                       <div class="form-group">
-                                           <label>Provide reasoning for your alignment choice(s): (optional)</label>
-                                           <textarea rows="3" ng-model="vm.artifact.evidence" class="form-control"></textarea>
-                                       </div>
-                                   </div>
-                               </div>
-                           </div>
-                       </div>
-                   </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>Provide reasoning for your alignment choice(s): (optional)</label>
+                                                    <textarea ng-keyup="vm.dirty=true"  rows="3" ng-model="vm.artifact.evidence" class="form-control"></textarea>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
-                   <br/><br/>
-                   <div class="row">
-                       <div class="col-lg-12">
-                           <artifact-builder-linked-objects artifact="vm.artifact"></artifact-builder-linked-objects>
-                       </div>
-                   </div>
-                    <br/><br/>
-                   <div class="row">
-                       <div class="col-lg-12">
-                           <div>
-                               <div class="pull-right">
-                                   <button type="button" class="btn btn-default btn-outline btn-sm "
-                                           confirm="Are you sure you want to delete this artifact?"
-                                           ng-click="vm.delete()">
-                                       Delete
-                                   </button>
-                                   <button type="submit" class="btn btn-default btn-outline btn-sm" ng-click="vm.saveForLater(vm.artifact)" >
-                                       Save for Later
-                                   </button>
+                            <br/><br/>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <artifact-builder-linked-objects artifact="vm.artifact"></artifact-builder-linked-objects>
+                                </div>
+                            </div>
+                            <br/><br/>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div>
+                                        <div class="pull-right">
+                                            <button type="button" class="btn btn-default btn-outline btn-sm "
+                                                    confirm="Are you sure you want to delete this artifact?"
+                                                    ng-click="vm.delete()">
+                                                Delete
+                                            </button>
+                                            <button type="submit" class="btn btn-default btn-outline btn-sm" ng-click="vm.saveForLater(vm.artifact)" >
+                                                Save for Later
+                                            </button>
 
-                                   <button type="submit" class="btn btn-primary btn-sm" ng-click="vm.submit(vm.artifact)">
-                                       Submit as Evidence
-                                   </button>
-                               </div>
-                           </div>
-                       </div>
-                   </div>
-               </ng-form>
+                                            <button type="submit" class="btn btn-primary btn-sm" ng-click="vm.submit(vm.artifact)">
+                                                Submit as Evidence
+                                            </button>
+                                            <label ng-if="vm.dirty" style="color:red">There are changes to save</label>
+                                            <label ng-if="!vm.dirty">All changes are saved</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <div class="col-lg-4">
+        <div class="ibox float-e-margins">
+
+            <div class="ibox-title">
+                <h5>Artifact Page Information</h5>
+            </div>
+            <div class="ibox-content">
+                <div>
+                    <p>Lorem ipsum dolor sit amet, verear qualisque sea no, nam primis nominati id, in illum offendit quaestio est. Mei veniam eripuit et, duo ne enim iusto malorum. Habeo delectus electram has ea, eam ei modo oporteat, copiosae consetetur definitiones eum eu. Ex nec stet cetero neglegentur. Aeterno assueverit id sea, at sit debitis vituperata, cu sea verear propriae. Eam cu volumus verterem referrentur.</p>
+
+                    <p>In malis mundi pri, ius ut ullum iusto, laoreet principes mel et. Nam at aeque ubique. Ad has vivendo adipiscing elaboraret. At ridens postea has, id stet vero mei, quo ea wisi facer. Sit ad omnium feugait, cu duo cibo commodo saperet. At sea brute aliquip malorum, at eum luptatum tractatos referrentur.</p>
+
+                    <h5>A few points to keep in mind:</h5>
+                    <ul>
+                        <li>You don't have to submit every Artifact you have collected.</li>
+                        <li>Artifacts you have collected here are private until you submit them as Evidence.</li>
+                        <li>At the end of the year, all artifacts that are not submitted as Evidence will be deleted.</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
 </div>
+
 
 
