Local service used in simulator

--- a/src/mobileAppBuilder/eVAL/app/layout/layout.html
+++ b/src/mobileAppBuilder/eVAL/app/layout/layout.html
@@ -22,6 +22,7 @@
                 <a href="#/event/check-in" class="item" menu-close>Settings</a>
                 <a href="#/event/attendees" class="item" menu-close>Observations</a>
                 <a href="#/event/attendees" class="item" menu-close>Artifacts</a>
+                <a href="#/app/login" class="item">Log Out</a>
             </ul>
         </ion-content>
     </ion-side-menu>
