Active evaluatee selection

--- a/src/mobileAppBuilder/eVAL/app/layout/layout.html
+++ b/src/mobileAppBuilder/eVAL/app/layout/layout.html
@@ -20,7 +20,7 @@
         <ion-content>
             <ul class="list">                
                 <a href="#/event/check-in" class="item" menu-close>Settings</a>
-                <a href="#/event/attendees" class="item" menu-close>Observations</a>
+                <a href="#/app/select-evaluatee" class="item" menu-close>Observations</a>
                 <a href="#/event/attendees" class="item" menu-close>Artifacts</a>
                 <a href="#/app/login" class="item">Log Out</a>
             </ul>
