--- a/src/web/app/artifacts/views/artifact-builder-linked-objects.directive.html
+++ b/src/web/app/artifacts/views/artifact-builder-linked-objects.directive.html
@@ -25,6 +25,14 @@
                         <input type="checkbox" data-checklist-model="vm.artifact.linkedObservations" data-checklist-value="observation">
                     </td>
                 </tr>
+                <tr><td colspan="3">Self Assessments</td></tr>
+                <tr ng-repeat="assessment in vm.assessments">
+                    <td>{{assessment.creationDateTime | date}}</td>
+                    <td>{{assessment.title}}</td>
+                    <td>
+                        <input type="checkbox" data-checklist-model="vm.artifact.linkedSelfAssessments" data-checklist-value="assessment">
+                    </td>
+                </tr>
                 <tr><td colspan="3">Student Growth Goals</td></tr>
                 <tr ng-repeat="goalBundle in vm.goalBundles">
                     <td>{{goalBundle.creationDateTime | date}}</td>
