WS-11.0.2 <michael@evanston Update Michael Custom Templates.xml, other.xml

--- a/templates/Michael Custom Templates.xml
+++ b/templates/Michael Custom Templates.xml
@@ -174,4 +174,13 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="co" value="console.log($e$);$END$" description="console object" toReformat="false" toShortenFQNames="true">
+    <variable name="e" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
