--- a/templates/Jasmine Helpers.xml
+++ b/templates/Jasmine Helpers.xml
@@ -36,7 +36,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="afterEach" value="afterEach(function{&#10;    $END$&#10;});" description="afterEach jasmine" toReformat="false" toShortenFQNames="true">
+  <template name="afterEach" value="afterEach(function (){&#10;    $END$&#10;});" description="afterEach jasmine" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
