--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -43,6 +43,12 @@
   <template name="var" value="var $start$ = $end$;" description="variable" toReformat="false" toShortenFQNames="true">
     <variable name="start" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="end" expression="" defaultValue="" alwaysStopAt="true" />
-    <context />
+    <context>
+      <option name="JSON" value="false" />
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
   </template>
 </templateSet>
