--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -1,5 +1,5 @@
 <templateSet group="MichaelChinn">
-  <template name="gulptask" value="var gulp = require('gulp');&#10;&#10;gulp.task('$task$', [], function() {&#10;    $end$&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
+  <template name="gulptask" value="'use strict';&#10;var gulp = require('gulp');&#10;&#10;gulp.task('$task$', [], function() {&#10;    $end$&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
     <variable name="task" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="end" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -45,6 +45,16 @@
     <variable name="end" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JSON" value="false" />
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="req" value="require('$npm$');$end$" description="npm require" toReformat="false" toShortenFQNames="true">
+    <variable name="npm" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="end" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
       <option name="JSX_HTML" value="true" />
