--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -51,7 +51,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="req" value="require('$npm$');$end$" description="npm require" toReformat="false" toShortenFQNames="true">
+  <template name="req" value="require('$npm$')$end$" description="npm require" toReformat="false" toShortenFQNames="true">
     <variable name="npm" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="end" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
