--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -26,7 +26,12 @@
     </context>
   </template>
   <template name="co" value="console.log($END$);" description="console log object" toReformat="false" toShortenFQNames="true">
-    <context />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
   </template>
   <template name="ct" value="console.log('$END$');" description="console log text" toReformat="false" toShortenFQNames="true">
     <context>
