--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -115,4 +115,22 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="describe" value="describe('$name$', function() {&#10;    $END$&#10;});" description="jasmine describe" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="it" value="it('$name$', function() {&#10;    $END$&#10;});" description="jasmine it" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
