--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -133,4 +133,13 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name=".then" value=".then(function($data$) {$END$})" description="then promise" toReformat="false" toShortenFQNames="true">
+    <variable name="data" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
