--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -115,26 +115,27 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="describe" value="describe('$name$', function() {&#10;    $END$&#10;});" description="jasmine describe" toReformat="false" toShortenFQNames="true">
-    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_SCRIPT" value="true" />
-      <option name="JS_EXPRESSION" value="true" />
-      <option name="JSX_HTML" value="true" />
-      <option name="JS_STATEMENT" value="true" />
-    </context>
-  </template>
-  <template name="it" value="it('$name$', function() {&#10;    $END$&#10;});" description="jasmine it" toReformat="false" toShortenFQNames="true">
-    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_SCRIPT" value="true" />
-      <option name="JS_EXPRESSION" value="true" />
-      <option name="JSX_HTML" value="true" />
-      <option name="JS_STATEMENT" value="true" />
-    </context>
-  </template>
   <template name=".then" value=".then(function($data$) {$END$})" description="then promise" toReformat="false" toShortenFQNames="true">
     <variable name="data" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="switch" value="switch($con$) {&#10;    $END$&#10;}" description="switch statement" toReformat="false" toShortenFQNames="true">
+    <variable name="con" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="case" value="case $con$:&#10;    $act$&#10;    break;&#10;$END$" description="case for switch" toReformat="false" toShortenFQNames="true">
+    <variable name="con" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="act" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
