--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -60,7 +60,8 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="func" value="function ($params$) {$END$}" description="function" toReformat="false" toShortenFQNames="true">
+  <template name="func" value="var $name$ = function ($params$) {&#10;    $END$&#10;};" description="function invoke" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="params" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
@@ -136,6 +137,16 @@
   <template name="case" value="case $con$:&#10;    $act$&#10;    break;&#10;$END$" description="case for switch" toReformat="false" toShortenFQNames="true">
     <variable name="con" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="act" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="function" value="function $name$($param$) {$END$}" description="function dec" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="param" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
