--- a/templates/Testing _Jasmine_Protractor_.xml
+++ b/templates/Testing _Jasmine_Protractor_.xml
@@ -77,7 +77,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="el" value="element($loc$));$END$" description="get element by" toReformat="false" toShortenFQNames="true">
+  <template name="el" value="element($loc$);" description="get element by" toReformat="false" toShortenFQNames="true">
     <variable name="loc" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
