--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -154,4 +154,23 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="if" value="if($cond$) {$END$}" description="if statement" toReformat="false" toShortenFQNames="true">
+    <variable name="cond" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="ife" value="if($cond$) {&#10;    $first$&#10;} else if {&#10;    $END$&#10;}" description="else if statement" toReformat="false" toShortenFQNames="true">
+    <variable name="cond" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="first" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
